Init version getting started section

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -17,3 +17,14 @@ th, td {
 p {
   font-size: 18px !important;
 }
+
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #558AB4;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  padding: 10px 20px;
+  text-decoration: none;
+}
